--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" 
+    integrity="sha512-..." 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer" />
     <title>The Roman Gym|Contact</title>
 </head>
 <body class="flex flex-col min-h-screen">
-    <nav class="bg-black text-red-500 p-4 flex items-center justify-between fixed-top ">
+    <nav class="bg-black text-red-500 p-4 flex items-center justify-between fixed top-0 w-full z-50">
         <!-- Logo + Title -->
         <div class="flex items-center space-x-2">
           <a href="https://google.com">
-            <img src="assets/Gym logo.jpeg" alt="Gym logo" class="rounded-full h-10 w-10 object-cover" />
+            <img src="images/gym logo.png" alt="logo"class="rounded-full h-10 w-10 object-cover">
           </a>
           <h3 class="underline font-bold">The Roman Gym</h3>
         </div>
@@ -50,10 +54,10 @@
       <!-- Location -->
       <div class="bg-white p-6 rounded-lg shadow-md mb-8">
         <h3 class="text-xl font-bold mb-2">Our Location</h3>
-        <p>Our Headquarters</p>
+        <p class="underline">Our Headquarters</p>
         <p>Along Thika Road Highway</p>
         <p class="text-sm text-gray-500">*Next to Garden City Mall*</p>
-        <img src="assets/map.jpg" alt="map">
+        <img src="images/map.jpg" alt="map">
       </div>
   
       <!-- Contact Methods -->
@@ -71,6 +75,9 @@
 
             </div>
       </div>
+
+      <!--comtact form-->
+      <h4>You con sign</h4>
 
     <form action="/submit" method="POST" class="bg-blue-200 m-3 flex justify-center items-center">
       <div class="p-6 w-full max-w-md">
@@ -117,8 +124,28 @@
       </div>
     </div>
         <!-- Footer -->
-        <footer class="bg-black text-center text-gray-500 py-4 text-sm mt-auto">
+        <footer class="bg-black text-center text-gray-500 py-4 text-lg flex px-5 ">
+          <div>
             &copy; 2025 Roman Gym. All rights reserved.
+          </div>
+          
+          <div>
+            <p>WORKOUT LIEE THE ROMANS,BE A LEGEND</p>
+          </div>
+
+          <div class="ml-200">
+            <h3 class="underline">Follow Us:</h3>
+            <ul class="flex text-white space-x-2">
+              <li><i class="fa-brands fa-facebook"></i></li>
+              <li><i class="fa-brands fa-instagram"></i></li>
+              <li><i class="fa-brands fa-twitter"></i></li>
+              <li><i class="fa-brands fa-tiktok"></i></li>
+            </ul>
+            <ul class="flex text-white space-x-2 ml-6">
+              <li><i class="fa-brands fa fa-snapchat"></i></li>
+              <li><i class="fa-brands fa-linkedin"></i></li>
+            </ul>
+          </div>
         </footer>
         <script type="text/javascript" src="script.js"></script>
 </body>
