--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" 
+  integrity="sha512-..." 
+  crossorigin="anonymous" 
+  referrerpolicy="no-referrer" />
   <title>The-Roman-Gym|Home</title>
 </head>
 <body>
-  <nav class="bg-black text-red-500 p-4 flex items-center justify-between fixed-top ">
+  <nav class="bg-black text-red-500 p-4 flex items-center justify-between fixed top-0 z-50 w-full ">
     <!-- Logo + Title -->
     <div class="flex items-center space-x-2">
       <a href="https://google.com">
-        <img src="assets/Gym logo.jpeg" alt="Gym logo" class="rounded-full h-10 w-10 object-cover" />
+        <img src="images/gym logo.png" alt="logo" class="rounded-full h-10 w-10 object-cover">
       </a>
-      <h3 class="underline font-bold">The Roman Gym</h3>
+      <h3 class="underline font-bold mr-2S">The Roman Gym</h3>
     </div>
   
     <!-- Nav Links -->
@@ -42,22 +46,29 @@
 
   </nav>
     <!-- Hero Section -->
-   
-    <section class="text-center py-12 px-4">
-      <h2 class="text-3xl md:text-5xl font-bold mb-4 text-red-400 underline">Welcome to The Roman Gym</h2>
-      <p class="text-lg max-w-2xl mx-auto text-black">Where Strength Meets Determination. Whether you're just starting out or you're an athlete ready to level up, Roman Gym is your ultimate fitness destination.</p>
-    </section>
+
+    <div class="mt-2 flex space-x-2 justify-center p-5">
+      <img src="images/gym hom.jpg" alt="Home" class="h-100 w-100 rounded-lg mt-3">
+      <img src="images/gym home 1.jpg" alt="Home" class="h-100 w-100 rounded-lg mt-3">
+      <img src="images/gym home 3.jpg" alt="Home" class="h-100 w-100 rounded-lg mt-3">
+    </div>
+    <div class="bg-white">
+  <section class="text-center py-12 px-4">
+    <h2 class="text-3xl md:text-5xl font-bold mb-4 text-red-400 underline">Welcome to The Roman Gym</h2>
+    <p class="text-lg max-w-2xl mx-auto text-black">Where Strength Meets Determination. Whether you're just starting out or you're an athlete ready to level up, Roman Gym is your ultimate fitness destination.</p>
+  </section>
+</div>
   
     <!-- What We Offer -->
-    <section class="py-12 px-6 bg-black">
+    <section class="py-12 px-6 bg-red-50 m-5 rounded-lg ">
       <h3 class="text-2xl font-bold text-center text-red-400 mb-6">What We Offer</h3>
-      <div class="grid md:grid-cols-2 gap-6 max-w-4xl mx-143 text-gray-200">
-        <ul class="mr-5">
+      <div class="text-black ml-110 flex space-x-3">
+        <ul>
           <li> Modern Equipment</li>
           <li> Expert Trainers</li>
           <li> Group Classes</li>
         </ul>
-        <ul class="ml-5">
+        <ul>
           <li> Personal Training</li>
           <li> Nutrition Guidance</li>
           <li> Flexible Hours</li>
@@ -66,15 +77,35 @@
     </section>
   
     <!-- Join CTA -->
-    <section class="text-center py-10 bg-black">
-      <h3 class="text-xl font-semibold text-red-300 mb-4">Ready to Get Started?</h3>
-      <p class="mb-6 text-gray-300">Join our fitness community today and take the first step toward your strongest self.</p>
+    <section class="text-center py-10 bg-gray-200 m-2 rounded-lg">
+      <h3 class="text-lg font-semibold text-red-500 mb-4">Ready to Get Started?</h3>
+      <p class="mb-6 text-gray-900">Join our fitness community today and take the first step toward your strongest self.</p>
       <a href="contact.html" class="bg-red-500 hover:bg-white hover:text-red-500 text-white py-2 px-6 rounded-lg transition duration-300">Join Now</a>
     </section>
   
     <!-- Footer -->
-    <footer class="bg-black text-center text-gray-500 py-4 text-sm">
-      &copy; 2025 Roman Gym. All rights reserved.
+    <footer class="bg-black text-center text-gray-500 py-4 text-lg flex px-5 ">
+      <div>
+        &copy; 2025 Roman Gym. All rights reserved.
+      </div>
+      <div class="ml-100">
+        <p>WORKOUT LIKE THE ROMANS,BE A LEGEND</p>
+      </div>
+      <div class="ml-100">
+        <h3 class="underline">Follow Us:</h3>
+        <ul class="flex text-white space-x-2">
+          <li><i class="fa-brands fa-facebook"></i></li>
+          <li><i class="fa-brands fa-instagram"></i></li>
+          <li><i class="fa-brands fa-twitter"></i></li>
+          <li><i class="fa-brands fa-tiktok"></i></li>
+        </ul>
+        <ul class="flex text-white space-x-2 ">
+          <li><i class="fa-brands fa-snapchat"></i></li>
+          <li><i class="fa-brands fa-linkedin"></i></li>
+          <li><i class="fa-brands fa-telegram"></i></li>
+          <li><i class="fa-brands fa-whatsapp"></i></li>
+        </ul>
+      </div>
     </footer>
   <script type="text/javascript" src="script.js"></script>
 </body>
