worked on the class page

--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
         <!-- Nav Links -->
         <ul class="hidden md:flex space-x-6">
           <li><a href="index.html" class="hover:text-white hover:underline ">HOME</a></li>
-          <li><a href="about.html" class="hover:text-white hover:underline ">ABOUT US</a></li>
           <li><a href="class.html" class="hover:text-white hover:underline ">OUR CLASS</a></li>
+          <li><a href="about.html" class="hover:text-white hover:underline ">ABOUT US</a></li>
           <li><a href="contact.html" class="hover:text-white hover:underline ">CONTACT US</a></li>
         </ul>
       
@@ -38,13 +38,20 @@
         </button>
         <ul id="mobileMenu" class="hidden flex-col space-y-4 mt-4 bg-black text-red-500 p-4">
           <li><a href="index.html" class="hover:text-white hover:underline">HOME</a></li>
-          <li><a href="about.html" class="hover:text-white hover:underline">ABOUT US</a></li>
           <li><a href="class.html" class="hover:text-white hover:underline">OUR CLASS</a></li>
+          <li><a href="about.html" class="hover:text-white hover:underline">ABOUT US</a></li>
           <li><a href="contact.html" class="hover:text-white hover:underline">CONTACT US</a></li>
         </ul>
       </div>
       </nav>
-
+      <div class="relative w-full h-screen overflow-hidden">
+        <div class="absolute inset-0 w-full h-full">
+        <img src="images/receptinist.jpg" alt="contact" class="absolute inset-0 w-full h-full object-contain opacity-0 transition-opacity duration-1000">
+        <img src="images/Pin Em Reception Desk Images, Photos _ Mungfali (1).jpeg" alt="contact" class="absolute inset-0 w-full h-full object-contain opacity-0 transition-opacity duration-1000">
+        <img src="images/receptionist.jpeg" alt="contact" class="absolute inset-0 w-full h-full object-contain opacity-0 transition-opacity duration-1000">
+        <img src="images/Premium Photo _ Receptionist talking on the phone.jpeg" alt="contact" class="absolute inset-0 w-full h-full object-contain opacity-0 transition-opacity duration-1000">
+        </div>
+      </div>
             <!-- Contact Info -->
       <div class="bg-white p-6 rounded-lg shadow-md mb-8">
             <h2 class="text-2xl font-semibold mb-4">Get in Touch</h2>
