--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" 
-  integrity="sha512-..." 
-  crossorigin="anonymous" 
-  referrerpolicy="no-referrer" />
+   
   <title>The-Roman-Gym|Home</title>
 </head>
 <body>
@@ -26,6 +22,7 @@
       <li><a href="class.html" class="hover:text-white hover:underline ">OUR CLASS</a></li>
       <li><a href="about.html" class="hover:text-white hover:underline ">ABOUT US</a></li>
       <li><a href="contact.html" class="hover:text-white hover:underline ">CONTACT US</a></li>
+      <li><a href="signin.html" class="hover:text-white hover:underline ">LOGIN</a></li>
     </ul>
   
     <!-- Responsive Hamburger Menu -->
