--- a/initial.html
+++ b/initial.html
@@ -9,22 +9,23 @@
 </head>
 <body>
     <!-- Navbar -->
-  <nav class="bg-black text-red-500 p-4 flex justify-between items-center fixed w-full z-50">
+  <nav class="bg-black text-red-500 p-4 flex justify-between items-center top-0 fixed w-full z-50">
     <div class="flex items-center space-x-2">
       <img src="images/gym logo.png" alt="Logo" class="w-10 h-10 rounded-full" />
       <h1 class="text-xl font-bold">The Roman Gym</h1>
     </div>
     <ul class="hidden md:flex space-x-6">
-      <li><a href="index.html" class="hover:text-white">Home</a></li>
-      <li><a href="about.html" class="hover:text-white">About</a></li>
-      <li><a href="class.html" class="hover:text-white">Classes</a></li>
-      <li><a href="contact.html" class="hover:text-white">Contact</a></li>
+      <li class="hover:text-white">Home</a></li>
+      <li class="hover:text-white">About</a></li>
+      <li class="hover:text-white">Classes</a></li>
+      <li class="hover:text-white">Contact</a></li>
       <li class="relative group">
         <button class="rounded-full h-8 w-8 border-2 border-yellow-900">
           <i class="fa-solid fa-user text-white"></i>
         </button>
         <ul class="absolute hidden group-hover:block bg-black text-red-500 mt-2 py-2 w-40 rounded shadow-lg z-10 right-0 top-0">
-          <li><a href="logout.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white" id="signupOption">Logout</a></li>
+          <li><a href="signin.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white" id="loginOption">Login</a></li>
+          <li><a href="signup.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white" id="signupOption">Signup</a></li>
         </ul>
       </li>
       
@@ -62,56 +63,12 @@
     }
 
     .bg-animation {
-        animation: backgroundChange 20s infinite;
+        animation: backgroundChange 30s infinite;
     }
 </style>
-
-  <!-- Features Section -->
-  <section class="py-16 px-6 md:px-20 text-center bg-white">
-    <h2 class="text-4xl font-bold text-red-500 mb-10">Why Choose The Roman Gym?</h2>
-    <div class="flex gap-10 space-x-2 bg-gray-100 p-6 rounded-lg">
-        <div>
-            <i class="fa-solid fa-users text-4xl text-red-500 mb-4"></i>
-            <h3 class="text-xl font-semibold mb-2">Community Driven</h3>
-            <p>Join a family of fitness enthusiasts who motivate and support each other.</p>
-        </div>
-        <div>
-          <i class="fa-solid fa-dumbbell text-4xl text-red-500 mb-4"></i>
-          <h3 class="text-xl font-semibold mb-2">State-of-the-Art Equipment</h3>
-          <p>From weights to advanced machines, we offer top-tier gear for every workout style.</p>
-        </div>
-        <div>
-            <i class="fa-solid fa-baseball-bat-ball text-4xl text-red-500 mb-4"></i>
-            <h3 class="text-xl font-semibold mb-2">Sports field</h3>
-            <p>We have a sports field to  train for sports.</p>
-        </div>
-    </div>
-    <div class="flex gap-10 space-x-2 bg-gray-100 p-6 rounded-lg">
-      <div>
-        <i class="fa-solid fa-clock text-4xl text-red-500 mb-4"></i>
-        <h3 class="text-xl font-semibold mb-2">Flexible Hours</h3>
-        <p>Open 24/7 to fit your busy schedule. Train when it suits you best.</p>
-      </div>
-      <div>
-        <i class="fa-solid fa-user-ninja text-4xl text-red-500 mb-4"></i>
-        <h3 class="text-xl font-semibold mb-2">Elite Trainers</h3>
-        <p>Train with certified professionals who push you to reach your full potential.</p>
-      </div>
-      <div>
-        <i class="fa-solid fa-heart-pulse text-4xl text-red-500 mb-4"></i>
-        <h3 class="text-xl font-semibold mb-2">Holistic Wellness</h3>
-        <p>Our programs support strength, endurance, nutrition, and mental health.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Call To Action -->
-  <section class="bg-red-50 text-black   py-16 text-center">
-    <h2 class="text-3xl font-bold mb-4">Start Your Transformation Today</h2>
-    <p class="mb-6">Join hundreds of members who have discovered their strongest self at The Roman Gym.</p>
-    <a href="join.html" class="bg-white text-black border-2 border-black px-8 py-3 rounded-full font-semibold hover:bg-black hover:text-red-500 transition">Learn More</a>
-  </section>
-
+<div class="mb-2">
+    <h2  class="text-center text-black mt-4 text-lg">Please <a href="signin.html" class="text-blue-600 underline">login</a> or <a href="signup.html" class="text-blue-600 underline">signup</a> inorder to learn more about our gym</h2>
+</div>
   <!-- Footer -->
   <footer class="bg-black text-white py-6 text-center flex">
     <div class="flex items-center space-x-2 mb-4 mr-60">
