--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,15 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Sign Up | The Roman Gym</title>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<body class="bg-gray-100 flex items-center justify-center min-h-screen relative">
+
+<!-- Back Button -->
+<div class="absolute top-6 left-6">
+  <button onclick="history.back()" class="flex items-center space-x-2 text-red-500 hover:text-red-600 transition">
+    <i class="fa-solid fa-arrow-left text-2xl"></i>
+    <span class="font-medium">Back</span>
+  </button>
+</div>
 
   <div class="bg-white max-w-md w-full p-8 rounded-xl shadow-lg">
     <h2 class="text-2xl font-bold text-center text-red-500 mb-6">Create Your Account</h2>
