--- a/class.html
+++ b/class.html
@@ -23,8 +23,7 @@
     <li class="relative group">
       <button class="rounded-full h-8 w-8 border-2 border-yellow-900"><i class="fa-solid fa-user text-white"></i></button>
     <ul class="absolute hidden group-hover:block bg-black text-red-500 mt-2 py-2 w-40 rounded shadow-lg z-10 right-0 top-0">
-      <li><a href="signin.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white">Login</a></li>
-      <li><a href="signup.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white">Signup</a></li>
+      <li><a href="signin.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white">Logout</a></li>
     </ul>
     </li>
     </ul>
