--- a/initial.html
+++ b/initial.html
@@ -9,23 +9,23 @@
 </head>
 <body>
     <!-- Navbar -->
-  <nav class="bg-black text-red-500 p-4 flex justify-between items-center top-0 fixed w-full z-50">
+  <nav class="bg-black text-red-500 p-4 flex justify-between items-center fixed w-full z-50">
     <div class="flex items-center space-x-2">
       <img src="images/gym logo.png" alt="Logo" class="w-10 h-10 rounded-full" />
       <h1 class="text-xl font-bold">The Roman Gym</h1>
     </div>
     <ul class="hidden md:flex space-x-6">
-      <li class="hover:text-white">Home</a></li>
-      <li class="hover:text-white">About</a></li>
-      <li class="hover:text-white">Classes</a></li>
-      <li class="hover:text-white">Contact</a></li>
+      <li><a href="index.html" class="hover:text-white">Home</a></li>
+      <li><a href="about.html" class="hover:text-white">About</a></li>
+      <li><a href="class.html" class="hover:text-white">Classes</a></li>
+      <li><a href="contact.html" class="hover:text-white">Contact</a></li>
       <li class="relative group">
         <button class="rounded-full h-8 w-8 border-2 border-yellow-900">
           <i class="fa-solid fa-user text-white"></i>
         </button>
         <ul class="absolute hidden group-hover:block bg-black text-red-500 mt-2 py-2 w-40 rounded shadow-lg z-10 right-0 top-0">
-          <li><a href="signin.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white" id="loginOption">Login</a></li>
-          <li><a href="signup.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white" id="signupOption">Signup</a></li>
+          <li><a href="signin.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white" id="signupOption">Login</a></li>
+          <li><a href="signup.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white" id="signupOption">signup</a></li>
         </ul>
       </li>
       
@@ -63,12 +63,12 @@
     }
 
     .bg-animation {
-        animation: backgroundChange 30s infinite;
+        animation: backgroundChange 20s infinite;
     }
 </style>
-<div class="mb-2">
-    <h2  class="text-center text-black mt-4 text-lg">Please <a href="signin.html" class="text-blue-600 underline">login</a> or <a href="signup.html" class="text-blue-600 underline">signup</a> inorder to learn more about our gym</h2>
-</div>
+
+  <p class="text-lg text-gray-300">Please <a href="signin.html">login</a> or <a href="signup.html">signup</a> inorder to Learn more about The Roman Gym.</p>
+
   <!-- Footer -->
   <footer class="bg-black text-white py-6 text-center flex">
     <div class="flex items-center space-x-2 mb-4 mr-60">
