--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <title>The-Roman-Gym | Home</title>
+    <title>The-Roman-Gym | Home(not logged in)</title>
 </head>
 <body>
     <!-- Navbar -->
@@ -16,15 +16,16 @@
     </div>
     <ul class="hidden md:flex space-x-6">
       <li><a href="index.html" class="hover:text-white">Home</a></li>
-      <li><a href="about.html" class="hover:text-white">About</a></li>
-      <li><a href="class.html" class="hover:text-white">Classes</a></li>
-      <li><a href="contact.html" class="hover:text-white">Contact</a></li>
+      <li><a href="initialabout.html" class="hover:text-white">About</a></li>
+      <li><a href="initialclass.html" class="hover:text-white">Classes</a></li>
+      <li><a href="initialcontact.html" class="hover:text-white">Contact</a></li>
       <li class="relative group">
         <button class="rounded-full h-8 w-8 border-2 border-yellow-900">
           <i class="fa-solid fa-user text-white"></i>
         </button>
         <ul class="absolute hidden group-hover:block bg-black text-red-500 mt-2 py-2 w-40 rounded shadow-lg z-10 right-0 top-0">
-          <li><a href="logout.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white" id="signupOption">Logout</a></li>
+          <li><a href="signin.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white">login</a></li>
+          <li><a href="signup.html" class="block px-4 py-2 hover:bg-red-500 hover:text-white">signup</a></li>
         </ul>
       </li>
       
