--- a/logout.html
+++ b/logout.html
@@ -12,7 +12,7 @@
   <div class="text-center">
     <i class="fa-solid fa-right-from-bracket text-6xl text-red-500 mb-6 animate-pulse"></i>
     <h1 class="text-2xl font-bold mb-4">Logging you out...</h1>
-    <p class="text-sm text-gray-300">Please wait, redirecting to homepage.</p>
+    <p class="text-sm text-gray-300">Please wait for a moment.</p>
   </div>
 
   <script>
@@ -21,7 +21,7 @@
 
     // Optional: add a small delay before redirect
     setTimeout(() => {
-      window.location.href = "initial.html"; // Redirect to the initial page
+      window.location.href = "index.html";
     }, 2000);
   </script>
 
