--- a/join.html
+++ b/join.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM8b+z4+2e5c5e5e5e5e5e5e5e5e5e5e5e5e5" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Contact Form</title>
 </head>
 <body>
+  <!-- Back Button -->
+<div class="absolute top-6 left-6">
+  <button onclick="history.back()" class="flex items-center space-x-2 text-red-500 hover:text-red-600 transition">
+    <i class="fa-solid fa-arrow-left text-2xl"></i>
+    <span class="font-medium">Back</span>
+  </button>
+</div>
       <!-- Contact Form -->
   <section class="py-16 px-6 md:px-20">
     <div class="max-w-3xl mx-auto bg-white shadow-lg p-8 rounded">
