--- a/signin.html
+++ b/signin.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" />
 </head>
 <body class="bg-gradient-to-br from-gray-100 to-gray-200 min-h-screen flex items-center justify-center">
+  <!-- Back Button -->
+<div class="absolute top-6 left-6">
+  <button onclick="history.back()" class="flex items-center space-x-2 text-red-500 hover:text-red-600 transition">
+    <i class="fa-solid fa-arrow-left text-2xl"></i>
+    <span class="font-medium">Back</span>
+  </button>
+</div>
 
   <div class="bg-white p-8 rounded-2xl shadow-xl w-full max-w-md">
     <h2 class="text-3xl font-bold text-center text-red-500 mb-6">Login to The Roman Gym</h2>
